tests/fixtures/invalid/primitive_typo_in_array.avsc
{
  "type": "record",
  "name": "TestArrayWithTypo",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": {
          "type": "ineger"
        }
      }
    }
  ]
}
